This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.9.1.4
  BugFix: Temp paths in Reports created from archive file (#1984346)
  BugFix: ISL file syntax highlighting starts comment with { (#1981326)

WinMerge 2.9.1.3 - 2008-06-05 (r5438)
  Update PCRE (regular expression library) to version 7.7 (#1941779)
  Add VB.net keywords to Basic highlighter (#1970912)
  Open conflict files by drag & dropping to main window (#1984884)
  Possible improvement for WinMerge exit bug (#1602313)
  BugFix: Location Pane flickers when resizing (#1740106)
  BugFix: Command line description text starting with "/" confused
    WinMerge (#1973225)
  BugFix: Item count in statusbar not get cleared (#1976480)
  New translation: Ukrainian (#1973149, #1974021)
  Translation updates:
  - Brazilian (#1978374)
  - Korean (#1978362)
  - Swedish (#1980970)

WinMerge 2.9.1.2 - 2008-05-23 (r5362)
  Optimize location pane (r5341, r5342, r5346, r5351, r5355, r5356)
  BugFix: Version Control filter did not match all VSS files (#1881186)
  BugFix: Fix showing differences in the end of the line (#1883409, #1962816)
  BugFix: Fix command line paths in quotes ending with "\" (#1963523)
  New translation: Greek (#1968429)
  Translation updates:
  - Bulgarian (#1957434)
  - Croatian (#1958283)
  - Swedish (#1950188, #1970074)

WinMerge 2.9.1.1 - 2008-04-23 (r5324)
  Release Notes update (#1933950)
  Installer: Use correct way to create start menu web link (#1913919)
  Installer: Simplify DeletePreviousStartMenu() function (#1913949)
  Installer: Updated the side art of the installer application (#1915012)
  Update URLs and switch to 2.8 manual (#1919965)
  New splash screen (#1914869)
  Tab icons at Filter dialog (#1926531)
  Add VS2003/VS2005 project files (#1926346)
  Create separate document for compiling WinMerge (#1927502)
  Update InnoSetup translations (#1931492)